--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/evolua?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/evolua
+spring.datasource.username=postgres
+spring.datasource.password=dados123
 
-# Dialeto SQL melhorar o SQL gerado pelo Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
