--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/evolua
+spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=postgres
-spring.datasource.password=dados123
-
-
+spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
